--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+html,
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Montserrat', Helvetica, Arial, Lucida, sans-serif;
 }
 
-main {
-  max-width: 1300px;
-  margin: auto;
-  min-height: 90vh;
-  padding: 10px;
-  font-family: 'Montserrat', Helvetica, Arial, Lucida, sans-serif;
+::-webkit-scrollbar {
+  background-image: linear-gradient(#f1f5f9, #f1f5f9);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gray
+}
+
+.floating__header_lightMode {
+  @apply bg-slate-200 m-2 bg-opacity-70 backdrop-blur-md right-0 left-0 rounded-lg
+}
+
+.floating__header_darkMode {
+  @apply dark:bg-gray-900 m-2 dark:bg-opacity-70 backdrop-blur-md right-0 left-0 rounded-lg
 }
