--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
 @layer scrollBar {
   .subs__scrollbar::-webkit-scrollbar {
     background-image: linear-gradient(transparent, transparent);
-    width: 8px;
+    width: 6px;
   }
 
   .subs__scrollbar::-webkit-scrollbar-button {
@@ -29,11 +29,11 @@ body {
 
 @layer tailwind {
   .floating__header_lightMode {
-    @apply bg-slate-200 m-2 bg-opacity-80 backdrop-blur-xl right-0 left-0 rounded-lg
+    @apply bg-slate-200 m-2 bg-opacity-95 backdrop-blur-2xl right-0 left-0 rounded-lg
   }
 
   .floating__header_darkMode {
-    @apply dark:bg-gray-900 m-2 dark:bg-opacity-80 backdrop-blur-xl right-0 left-0 rounded-lg
+    @apply dark:bg-gray-900 m-2 dark:bg-opacity-95 backdrop-blur-2xl right-0 left-0 rounded-lg
   }
 }
 
